--- a/source/blender/blenlib/CMakeLists.txt
+++ b/source/blender/blenlib/CMakeLists.txt
@@ -247,7 +247,7 @@ set(SRC
   BLI_multi_value_map.hh
   BLI_noise.h
   BLI_path_util.h
-  BLI_polyclip_2d.hh
+  BLI_polyclip_2d.h
   BLI_polyfill_2d.h
   BLI_polyfill_2d_beautify.h
   BLI_probing_strategies.hh
